crates/voom-cli/tests/snapshots/safety_policy_envelope__safety_policy_envelope__create_rejects_unknown_operation.snap
---
source: crates/voom-cli/tests/safety_policy_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "safety-policy",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "BAD_ARGS",
    "message": "unknown operation kind \"not_an_operation\""
  }
}
