crates/voom-cli/tests/snapshots/safety_policy_envelope__safety_policy_envelope__delete_reports_success.snap
---
source: crates/voom-cli/tests/safety_policy_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "safety-policy",
  "status": "ok",
  "data": {
    "slug": "conservative",
    "deleted": true
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
