crates/voom-cli/tests/snapshots/safety_policy_envelope__safety_policy_envelope__list_outputs_records.snap
---
source: crates/voom-cli/tests/safety_policy_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "safety-policy",
  "status": "ok",
  "data": {
    "policies": [
      {
        "id": 1,
        "slug": "conservative",
        "display_name": "Conservative default",
        "schema_version": 1,
        "auto_execute_operations": [
          "remux",
          "transcode_video"
        ],
        "backup_required": true,
        "approval_required": false,
        "allowed_commit_modes": [
          "add_only"
        ],
        "verification_level": "quick_decode",
        "block_on_failed_records": true,
        "block_on_recovery_required_records": true,
        "created_at": "[ts]",
        "updated_at": "[ts]"
      }
    ]
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
